@@ -1,3 +1,8 @@
+2011-07-14  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/49651
+	* gcc.dg/torture/pr49651.c: New testcase.
+
 2011-07-13  Janne Blomqvist  <jb@gcc.gnu.org>
 
 	Backport from trunk:
